# GameC-

OpenGL/project1Test/: CMakeLists.txt
OpenGL/project1Test/glad (1)/src/: glad.c
OpenGL/project1Test/include/: Shader.h
OpenGL/project1Test/include/glad/: glad.h
OpenGL/project1Test/shaders/: general_fragment_shader.frag  general_vertex_shader.vs
OpenGL/project1Test/src/: Shader.cpp  general_fragment_shader.txt  general_vertex_shader.txt  main.cpp  main2.cpp  main3.cpp
PongGame/: Ball.cpp  Ball.h  Ball.hpp  CPUPaddle.cpp  CPUPaddle.hpp  Paddle.cpp  Paddle.hpp  Score.cpp  Score.hpp  a.out  build.bash  main.cpp
SnakeGame/: Food.hpp  a.out  main.cpp
